Section: minor bug fix to display the entirety of collage that's overflowed

--- a/client/stylesheets/globals/templates/section.import.less
+++ b/client/stylesheets/globals/templates/section.import.less
@@ -1,7 +1,6 @@
 [class^="section-"],
 [class*=" section-"] {
   clear: both;
-  overflow: hidden;
   position: relative;
 
   .subtitle-section {
